# multi-destinations-trip-planner

./: .gitignore  .vercelignore  Makefile  README.md  bootstrap.py  config.py  main.py  plan_trip_usecase.py  planner.py  pyproject.toml  trip_model.py  trip_repository.py
bootstrap/: bootstrap.py  ddl.sql  hotels.json  tourism_spots.json
models/: place.py
server/: main.py
templates/: index.html
templates/statics/: script.js  style.css
